# Hybrid-TimeMixer-XGBoost-PM25

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.sha256  Makefile  PROJECT_STATUS.md  README.md  pyproject.toml  requirements.txt  run_common_history_sensitivity.ps1  run_full_study.ps1  run_quick_demo.ps1
.github/workflows/: ci.yml
PM25/: README.md
PM25/Dataset/: stations.csv
PM25/Models and Data Cleaning/: 03_baselines.ipynb  04_hybrid_comparison.ipynb  05_visualizations.ipynb
PM25/Report and Presentation/: PM25_TimeMixer_XGBoost_Slides_sample_format.pptx  PM25_TimeMixer_XGBoost_Slides_template_aligned.pptx  PM25_TimeMixer_XGBoost_Slides_with_EDA_SQL_images.pptx  presentation_defense_notes.md
app/: README.md  streamlit_app.py
app/components/: forecast_tab.py  (+2 more)
data/: stations.example.csv
docs/: Research_Proposal.docx  architecture.md  cleaning_protocol.md  data_card.md  experiment_protocol.md  figure_plan.md  figure_provenance.md  model_card.md  result_schema.md  reviewer_response.md  sample_alignment.md  sota_claim_policy.md  station_selection.md
notebooks/: 01_data_audit.ipynb  02_eda.ipynb
paper/: generated_abstract.tex  generated_conclusion.tex  generated_discussion.tex  generated_results.tex  main.tex  refs.bib
results/: pm25_research_queries.sqlite
scripts/: compare_history_sensitivity.py  export_framework_pdf.py  preprocess_stations.py  run_cleaning.py  run_multiseed.py  run_multistation.py  validate_environment.py
tests/: test_cleaning.py  test_features.py  test_metrics.py  test_models.py  test_pipeline.py  test_repository.py
(+95 files in other folders)
