[build-system]
requires=["setuptools>=68","wheel"]
build-backend="setuptools.build_meta"
[project]
name="pm25forecast"
version="1.0.0"
description="Hybrid TimeMixer-XGBoost multi-horizon PM2.5 forecasting"
readme="README.md"
requires-python=">=3.10"
dependencies=["numpy>=1.26","pandas>=2.1","scikit-learn>=1.3","scipy>=1.11","matplotlib>=3.8","seaborn>=0.13","torch>=2.1","xgboost>=2.0","joblib>=1.3","reportlab>=4.0"]
[project.optional-dependencies]
app=["streamlit>=1.30","plotly>=5.18"]
dev=["pytest>=8","pytest-cov>=5","ruff>=0.4"]
[project.scripts]
pm25-clean="pm25forecast.cli:clean_main"
pm25-baselines="pm25forecast.cli:baseline_main"
pm25-experiment="pm25forecast.cli:experiment_main"
pm25-figures="pm25forecast.cli:figures_main"
[tool.setuptools]
package-dir={""="src"}
[tool.setuptools.packages.find]
where=["src"]
[tool.pytest.ini_options]
testpaths=["tests"]
addopts="-q"
[tool.ruff]
line-length=100
target-version="py310"
